5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1593_588.log
== SUBMITION (2019-04-03 01:16:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("saque: "))
notas100 = valor // 100
notas50 = (valor%100) //50

x = notas 100*100 + notas50*50

notas10 = (valor - x)//10
print(notas100)
print(notas50)
print(notas10)
-- EXECUTION TIME:
0.216625
-- ERROR:
  File "/home/codebench/codes/1593/588/main.py", line 8
    x = notas 100*100 + notas50*50
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 01:16:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("saque: "))
notas100 = valor // 100
notas50 = (valor%100) //50

x = notas 100*100 + notas50*50

notas10 = (valor - x)//10
print(notas100)
print(notas50)
print(notas10)
-- ERROR:
File "XXXX", line 8
    x = notas 100*100 + notas50*50
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 01:17:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("saque: "))
notas100 = valor // 100
notas50 = (valor%100) //50

x = notas100*100 + notas50*50

notas10 = (valor - x)//10
print(notas100)
print(notas50)
print(notas10)
-- EXECUTION TIME:
0.17697
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
